# app/controllers/bookFlightController.js
@@ -29,6 +29,64 @@ module.exports.payForFlight = async (req, res) => {
   }
 };
 
+// NOTE: Generate new payment information
+module.exports.generateNewPaymentInfo = async (req, res) => {
+  try {
+    const decodedToken = token.decodeToken(req.header("Authorization"));
+
+    const bookedFlight = await bookedFlightRepository.findOne({ bookedBy: decodedToken.user, code: req.params.bookedFlightCode });
+    const flightDetails = await flightInfoRepository.getFlight(bookedFlight.searchedFlightCode, bookedFlight.flightDetailsCode);
+    const paymentMethod = await wallet.getPaymentMethod(req.body.paymentMethodName);
+    const now = new Date();
+
+    if (now - flightDetails.searchedTime > process.env.SEARCH_TIMEOUT) {
+      throw "search_expired";
+    }
+
+    if (bookedFlight.status === EBookedFlightStatus.get("PAYING")) {
+      let amount = 0;
+      let result = {};
+
+      switch (req.body.payWay) {
+        case "WALLET":
+          const userWallet = await wallet.getUserWallet(decodedToken.user);
+          amount = Math.max(0, flightDetails.flights.price.total - userWallet.credit);
+          break;
+
+        case "PAY":
+          amount = flightDetails.flights.price.total;
+          break;
+
+        default:
+      }
+
+      switch (paymentMethod.type) {
+        case "STRIPE":
+          result = await wallet.chargeUserWalletByCreditCard(decodedToken.user, amount);
+          break;
+
+        case "CRYPTOCURRENCY":
+          // TODO: Create payment info and make transaction by crypto currency
+          break;
+
+        default:
+      }
+
+      bookedFlight.transactionId = result.externalTransactionId;
+      await bookedFlight.save();
+
+      response.success(res, {
+        code: bookedFlight.code,
+        ...result
+      });
+    } else {
+      throw "payed";
+    }
+  } catch (e) {
+    response.exception(res, e);
+  }
+};
+
 // NOTE: Book a flight
 module.exports.bookFlight = async (req, res) => {
   try {
@@ -99,9 +157,9 @@ module.exports.getBookedFlights = async (req, res) => {
 
     const result = await bookedFlightRepository.getBookedFlights(decodedToken.user);
     response.success(res, result.map(bookedFlight => ({
-      bookedBy: bookedFlight.bookedBy,
+      // bookedBy: bookedFlight.bookedBy,
       code: bookedFlight.code,
-      status: EBookedFlightStatus.find(bookedFlight.status),
+      status: EBookedFlightStatus.find(bookedFlight.status) ?? bookedFlight.status,
       time: bookedFlight.time,
       passengers: bookedFlight.passengers.map(passenger => ({
         documentCode: passenger.documentCode,
@@ -115,8 +173,8 @@ module.exports.getBookedFlights = async (req, res) => {
         code: bookedFlight.flightInfo.destination.code,
         name: bookedFlight.flightInfo.destination.name,
       },
-      travelClass: bookedFlight.flightInfo.searches.travelClass,
-      price: bookedFlight.flightInfo.searches.flights.price.total,
+      travelClass: bookedFlight.flightInfo.travelClass,
+      price: bookedFlight.flightInfo.flights.price.total,
     })));
   } catch (e) {
     response.exception(res, e);
